* adding body for heating analyzer